# cinnamon

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cinnamon.sln  cinnamon.vcxproj  cinnamon.vcxproj.filters  cmake_install.cmake
.github/workflows/: build.yml  cmake.yml
Release/: ALL_BUILD.exe.recipe  ZERO_CHECK.exe.recipe  cinnamon.exp  cinnamon.lib
build32/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cinnamon.sln  cinnamon.vcxproj  cinnamon.vcxproj.filters  cmake_install.cmake
examples/: button_test.py  sprite_test.py
include/: PYTHON_39_LICENSE
include/cocos2dx/actions/: CCAction.h  CCActionInterval.h  CCActionTween.h
include/cocos2dx/base_nodes/: CCNode.h
include/cocos2dx/cocoa/: CCObject.h
include/cocos2dx/draw_nodes/: CCDrawingPrimitives.h
include/cocos2dx/include/: CCProtocols.h  cocos2d.h
include/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h
include/cocos2dx/menu_nodes/: CCMenuItem.h
include/cocos2dx/support/data_support/: ccCArray.h
include/cocos2dx/touch_dispatcher/: CCTouchDispatcher.h
include/minhook/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters  minhook.x32.lib
include/pybind11/: cast.h
maple_cli.egg-info/: PKG-INFO  entry_points.txt
src/: cinnamon.h  dllmain.cpp  globals.h  hooks.h  macros.h  mod_menu.h  utilities.h
src/bindings/: cinnamon.h  cocos2d_bindings.h  enums.h  geometry_dash_module.h  geometrydash.bro  manual_bindings.h  winstl.h
src/bindings/cinnamon/: cinnamon.h
src/bindings/cocos2d/: Director.h  cocos.h
src/bindings/cocos2d/base_nodes/: Node.h
src/bindings/cocos2d/cocoa/: Copying.h  Object.h  Point.h  Size.h
src/bindings/cocos2d/layers_scenes_transitions_nodes/: Layer.h  Scene.h
src/bindings/cocos2d/menu_nodes/: MenuItem.h  MenuItemSprite.h
src/bindings/cocos2d/sprite_nodes/: Sprite.h
src/bindings/geometrydash/: FLAlertLayer.h  PlayerObject.h  geometrydash.h
src/bindings/geometrydash/layers_scenes_transitions_nodes/: FLAlertLayer.h  GJListLayer.h  MenuLayer.h
src/bindings/geometrydash/level_nodes/: GJGameLevel.h
src/bindings/geometrydash/menu_nodes/: CCMenuItemSpriteExtra.h
src/bindings/geometrydash/robtop/: CCMenuItemSpriteExtra.h
src/bindings/geometrydash/scroll_nodes/: BoomListView.h  CCContentLayer.h  CCIndexPath.h  CCScrollLayerExt.h  CustomListView.h  TableView.h
src/bindings/geometrydash/sprite_nodes/: PlayerObject.h
src/core/: hooks.cpp  hooks.h  logger.cpp  logger.h  macros.h  module.cpp  module.h  python.cpp  python.h
src/core/hooks/: ModdedMenuLayer.h
src/core/utilities/: game.h  path.cpp  path.h
src/hooks/: mod_menu.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
